# voice-symptom-triage-assistant

./: .env.example  .gitignore  ALTERNATIVE_MODEL_LOADING.md  COLAB_TROUBLESHOOTING.md  CUDA_FIX.md  Dockerfile  GPU_ACCELERATION.md  MEDGEMMA_FIXES.md  NOTICE  README.md  colab_deployment.ipynb  debug_medgemma.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_medgemma_integration.py  update_colab_notebook.py
app/: __init__.py  config.py  main.py
app/models/: __init__.py  medasr_service.py  medgemma_service.py
app/prompts/: __init__.py  documentation_prompts.py
app/static/: index.html
app/static/css/: style.css
app/static/js/: app.js
app/utils/: audio_handler.py
scripts/: setup.ps1  setup.sh
test_data/: README.md
